# CurveExtractor

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  curvefinder.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_release.yml
assets/source/: icon.xcf  splash.xcf
src/curve_extractor/: application.py  cli.py  constants.py  main.py  tools.py  widgets.py
tests/: graph_generator.py
