[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curve_extractor"]

[project]
name = "curve_extractor"
version = "3.0"
description = "Simple app to let you extract the equations from a graph"
readme = "README.md"
authors = [
    { name = "Bruno-Pier Busque", email = "curve-extractor-dev@outlook.com" },
]
maintainers = [
    { name = "Bruno-Pier Busque", email = "curve-extractor-dev@outlook.com" },
]
dependencies = [
    "matplotlib",
    "PyQt6",
    "opencv-python",
    "numpy",
    "pyinstaller",
    "scipy",
    "Pillow",
    "darkdetect",
]
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["curve", "equation", "extractor", "finder"]
classifiers = ["Programming Language :: Python"]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[project.urls]
Repository = "https://github.com/BrunoB81HK/CurveExtractor.git"
"Bug Tracker" = "https://github.com/BrunoB81HK/CurveExtractor/issues"
Changelog = "https://github.com/BrunoB81HK/CurveExtractor/blob/master/CHANGELOG.md"

[project.scripts]
ce_cli = "curve_extractor.cli:main"

[project.gui-scripts]
curve_extractor = "curve_extractor.main:main"
